--- a/projeto-sistemas-distribuidos/InterfaceVisual/Views/Produto/Cadastrar.cshtml
+++ b/projeto-sistemas-distribuidos/InterfaceVisual/Views/Produto/Cadastrar.cshtml
@@ -20,7 +20,7 @@
         </div>
         <!-- /.box-header -->
         <!-- form start -->
-        <form class="form-horizontal" method="post" action="/Product/Create">
+        <form class="form-horizontal" method="post" action="/Produto/Cadastrar">
             <div class="box-body">
                 <div class="form-group">
                     <label for="InputNome" class="col-sm-2 control-label">Nome</label>
