--- a/projeto-sistemas-distribuidos/InterfaceVisual/Views/Shared/_Layout.cshtml
+++ b/projeto-sistemas-distribuidos/InterfaceVisual/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <!-- DataTables -->
     <link rel="stylesheet" href="~/bower_components/datatables.net-bs/css/dataTables.bootstrap.min.css">
-    <!-- Morris chart -->
+    <!-- Gráfico de Morris -->
     <link rel="stylesheet" href="bower_components/morris.js/morris.css">
     <!-- Fonte Awesome -->
     <link rel="stylesheet" href="~/bower_components/font-awesome/css/font-awesome.min.css">
