--- a/projeto-sistemas-distribuidos/InterfaceVisual/Views/Home/Index.cshtml
+++ b/projeto-sistemas-distribuidos/InterfaceVisual/Views/Home/Index.cshtml
@@ -29,50 +29,50 @@
                     <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
                 </div>
             </div>
-            <!-- ./col -->
-            <div class="col-lg-3 col-xs-6">
-                <!--  small box -->
-                <div class="small-box bg-green">
-                    <div class="inner">
-                        <h3> @Model.nurses_count<sup style="font-size: 20px"></sup></h3>
-                        <p>Nurses</p>
-                    </div>
-                    <div class="icon">
-                        <i class="fa fa-users"></i>
-                    </div>
-                    <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+            <!-- ./col
+        <div class="col-lg-3 col-xs-6">
+            <!--  small box 
+            <div class="small-box bg-green">
+                <div class="inner">
+                    <h3> --Model.nurses_count<sup style="font-size: 20px"></sup></h3>
+                    <p>Nurses</p>
                 </div>
-            </div>
-            <!-- ./col -->
-            <div class="col-lg-3 col-xs-6">
-                <!-- small box -->
-                <div class="small-box bg-yellow">
-                    <div class="inner">
-                        <h3> @Model.categoria_count</h3>
-                        <p>Categorias</p>
-                    </div>
-                    <div class="icon">
-                        <i class="ion ion-person"></i>
-                    </div>
-                    <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                <div class="icon">
+                    <i class="fa fa-users"></i>
                 </div>
+                <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
             </div>
+        </div> -->
+        <!-- ./col -->
+        <div class="col-lg-3 col-xs-6">
+            <!-- small box -->
+            <div class="small-box bg-yellow">
+                <div class="inner">
+                    <h3> @Model.categoria_count</h3>
+                    <p>Categorias</p>
+                </div>
+                <div class="icon">
+                    <i class="ion ion-person"></i>
+                </div>
+                <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+            </div>
+        </div>
 
-            <!-- ./col -->
-            <div class="col-lg-3 col-xs-6">
-                <!-- small box -->
-                <div class="small-box bg-red">
-                    <div class="inner">
-                        <h3>65</h3>
-                        <p>This Month</p>
-                    </div>
-                    <div class="icon">
-                        <i class="ion ion-pie-graph"></i>
-                    </div>
-                    <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+        <!-- ./col -->
+        <div class="col-lg-3 col-xs-6">
+            <!-- small box -->
+            <div class="small-box bg-red">
+                <div class="inner">
+                    <h3>65</h3>
+                    <p>This Month</p>
                 </div>
+                <div class="icon">
+                    <i class="ion ion-pie-graph"></i>
+                </div>
+                <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
             </div>
-            <!-- ./col -->
+        </div>
+        <!-- ./col -->
         </div>
         <!-- /.row -->
         <!-- Main row -->
@@ -229,8 +229,8 @@
       resize: true,
       colors: ["#3c8dbc", "#f56954", "#00a65a"],
       data: [
-        {label: "Registered produto", value: @Model.produto_count}
-        {label: "Registered Nurses", value:  @Model.nurses_count},
+        {label: "Registered produto", value: @Model.produto_count},
+        //{label: "Registered Nurses", value:  --Model.nurses_count},
         {label: "Registered Patients", value:  @Model.categoria_count}
       ],
       hideHover: 'auto'
